[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/recipes/types/BaseRecipe.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/im-fell-english-pro/FeENrm28C.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/recipes/order_initial.png" type="Texture" id=3]
[ext_resource path="res://assets/recipes/order_ready.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 68, 69 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 68, 0, 68, 69 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 68, 69 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": false,
"name": "ready",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 120.514, 126.901 )

[node name="BaseRecipe" type="Area2D"]
script = ExtResource( 1 )

[node name="Background" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 136, 136 )
scale = Vector2( 4, 4 )
frames = SubResource( 4 )

[node name="Title" type="Label" parent="."]
margin_left = 25.0
margin_top = 22.0
margin_right = 238.0
margin_bottom = 66.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0980392, 0.0980392, 0.101961, 1 )
text = "Recipe Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Worth" type="Label" parent="."]
margin_left = 180.0
margin_top = 94.0
margin_right = 238.0
margin_bottom = 135.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0980392, 0.0980392, 0.101961, 1 )
text = "$5"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ingredients" type="HBoxContainer" parent="."]
margin_left = 26.0
margin_top = 90.0
margin_right = 26.0
margin_bottom = 90.0
custom_constants/separation = 56
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickableArea" type="CollisionShape2D" parent="."]
position = Vector2( 134.242, 132.408 )
shape = SubResource( 6 )

[node name="FadeInTween" type="Tween" parent="."]

[node name="MoveTween" type="Tween" parent="."]
[connection signal="input_event" from="." to="." method="_on_recipe_clicked"]
